# OPEX

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
components/base/: gallery_list.html
components/benefits_block/: benefits_block.html  benefits_block.py
components/description_block/: description_block.py
components/image_text_block/: image_text_block.py
components/tab_block/: tab_block.py
components/tab_item_description_block/: tab_item_description_block.py
components/text_with_gallery_block/: text_with_gallery_block.html  text_with_gallery_block.py
components/three_tab_block/: three_tab_block.html  three_tab_block.py
components/units_block/: units_block.html  units_block.py
components/video_image_chooser_block/: video_image_chooser_block.html  video_image_chooser_block.py
config/: settings.py  urls.py
frontend/: 404.html  about.html  accaunt.html  address-details.html  address.html  cart.html  checkout-fiz.html  checkout-ur.html  customers.html  enter.html  gallery.html  gulpfile.js  history-trans.html  history.html  info-fiz.html  info-ur.html  news.html  one-new.html  order.html  package-lock.json  package.json  pages-list.html  password-recovery.html  password.html  payment.html  reg-fiz.html  shop.html  terms-of-use.html  thanks.html  vite.config.js
frontend/js/: scripts.js
src/base/: apps.py  panels.py  wagtail_hooks.py
src/contact_settings/: apps.py  models.py
src/gallery_page/: apps.py  models.py  translation.py
src/home_page/: apps.py  models.py  translation.py
templates/: base.html  footer.html  header.html
(+102 files in other folders)
